--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    - name: Checkmarx AST Github Action
+  # You may pin to the exact commit or the version.
+  # uses: Checkmarx/ast-github-action@43529fc9995a2ea4d76be3ffc79b5fff60d9f542
+  uses: Checkmarx/ast-github-action@2.0.3
+  with:
+    
+    base_uri: 
+    https://eu.ast.checkmarx.net
+    cx_tenant: ps_tenant
+    cx_client_id: ${{ secrets.CLIENT_ID }}
+    cx_client_secret: ${{ secrets.CLIENT_SECRET }}
+    project_name: ${{ github.repository }}
+    branch: ${{ github.ref }}
+    github_token: ${{ github.token }}
+    additional_params:--file-filter !readme --report-format sarif --output-name results
     steps:
       - name: Checkout
         uses: actions/checkout@v2
