--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,24 @@
 
 name: Checkmarx AST Scan
-on:
-  push:
-    branches:
-      - main
-      - master
-      - dev
+on: {push, pull_request}
+    
 jobs:
   build:
     runs-on: ubuntu-latest
+    steps:
     - name: Checkmarx AST Github Action
       uses: Checkmarx/ast-github-action@2.0.3
       with:
-    
-    base_uri: 
-    https://eu.ast.checkmarx.net
+    base_uri: https://eu.ast.checkmarx.net
     cx_tenant: ps_tenant
     cx_client_id: ${{ secrets.CLIENT_ID }}
     cx_client_secret: ${{ secrets.CLIENT_SECRET }}
     project_name: ${{ github.repository }}
     branch: ${{ github.ref }}
-    github_token: ${{ github.token }}
-    additional_params:--file-filter !readme --report-format sarif --output-name results
+    additional_params: --file-filter !readme --report-format sarif --output-name results
+    uses: github/codeql-action/upload-sarif@v1
+    with:
+      sarif_file: results.sarif
     steps:
       - name: Checkout
         uses: actions/checkout@v2
